[package]
name = "axum_image-filtering"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serve = "0.0.1"
tokio = { version = "1.44.0", features = ["full"] }
